fix spacing

--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
   margin: 0;
-  padding: 1em 1em 0.5em 1em;
-  background-color: rgb(31,32,35);
+  padding: 0;
 }
 
 h1, p {
@@ -42,12 +41,22 @@ p {
   margin-bottom: 1em;
 }
 
+#heatmap-div-div {
+  width: 100%;
+  height: 31em;
+}
+
 #heatmap-div {
+  width: 100%;
+  text-align: center;
+  padding: 2em 2em 2em .75em;
+}
+
+#heatmap {
   margin: auto;
-  margin-top: 1em;
-  margin-bottom: 0;
-  width: 40em;
-  height: 27em;
+  text-align: left;
+  max-width: 46.5em;
+  line-height: 1.8em;
 }
 
 #attribution {
